src/components/Article/Publications/styles.scss
.article-featured {
  &__link {
    &--publ {
      display: block;

      height: 100%;
    }
  }

  &__image {
    &--publ {
      height: 100%;

      position: relative;

      overflow: hidden;

      img {
        object-fit: cover;

        width: 100%;
        height: 100%;

        position: absolute;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
      }
    }
  }
}

.article {
  &--publication {
    margin-bottom: 50px;

    @include media-breakpoint-down(lg) {
      margin-bottom: 24px;
    }
  }

  &__image {
    &--publ {
      @include media-breakpoint-up(sm) {
        max-width: 100%;
        margin-bottom: 0;
      }
    }
  }
}

.art-publ {
  &__title {
    a {
      font-weight: 600;
      font-size: 20px;
    }

    @include media-breakpoint-down(sm) {
      margin-bottom: 10px;
    }

    &--on-medium {
      .article-title__link {
        line-height: 32px;
      }

      @include media-breakpoint-up(md) {
        margin-bottom: 16px;
      }
    }

    &--under-medium,
    &--under-small {
      margin-bottom: 16px;

      @include media-breakpoint-down(sm) {
        margin-bottom: 10px;
      }
    }
  }

  &__category {
    &--grey,
    &--on {
      &-small,
      &-medium,
      &-big {
        margin-bottom: 10px;
      }
    }

    &--under {
      &-medium {
        margin-bottom: 18px;

        @include media-breakpoint-down(md) {
          margin-bottom: 10px;
        }
      }

      &-small,
      &-big {
        margin-bottom: 10px;
      }
    }
  }

  &__wrapper {
    &--grey {
      padding: 23px 20px 24px;
    }

    &--under {
      padding-top: 20px;

      @include media-breakpoint-down(md) {
        padding-top: 17px;
      }

      &-big {
        padding: 69px 49px;

        background-color: rgba($black, 0.06);
      }
    }

    &--on {
      &-medium,
      &-small {
        padding-left: 36px;
        padding-right: 36px;

        @include media-breakpoint-down(sm) {
          padding-left: 25px;
          padding-right: 25px;
        }
      }

      &-big {
        display: flex;
        flex-direction: column;
        justify-content: center;

        padding-left: 48px;
        padding-right: 48px;

        background-color: rgba($black, 0.06);

        @include media-breakpoint-down(lg) {
          padding: 34px 20px 37px;
        }
      }
    }

    &--on-medium {
      padding-bottom: 31px;

      @include media-breakpoint-down(sm) {
        padding-bottom: 22px;
      }
    }

    &--on-small {
      padding-bottom: 24px;

      @include media-breakpoint-down(md) {
        padding-bottom: 21px;
      }
    }
  }

  &--under-big,
  &--on-big {
    .article-title__link {
      font-size: 32px;
      letter-spacing: -0.02em;

      @include media-breakpoint-up(lg) {
        font-weight: 800;
      }

      @include media-breakpoint-only(lg) {
        font-size: 25px;
      }

      @include media-breakpoint-down(md) {
        font-size: 20px;
        font-weight: 700;
      }
    }
  }

  &--grey {
    &-small,
    &-medium,
    &-big {
      &::before {
        content: '';

        position: absolute;
        left: 12px;
        right: 12px;
        top: 0;
        bottom: 0;

        background-color: rgba($black, 0.06);

        z-index: -1;
      }

      .meta-author {
        color: $black;
        @include media-breakpoint-down(md) {
          font-weight: 600;
        }
      }
    }

    &-small,
    &-medium {
      .article-featured {
        &__image {
          padding-bottom: 67.69%;
        }
      }
    }
  }

  &--under {
    &-big {
      .meta-author {
        color: $black;
      }
    }

    &-medium,
    &-small {
      .meta-author {
        color: $grey-200;
      }
    }

    &-medium {
      .article-title__link {
        @include media-breakpoint-up(lg) {
          font-size: 26px;
        }
      }

      figure {
        padding-bottom: 57.7%;

        @include media-breakpoint-down(md) {
          padding-bottom: 62.99%;
        }
      }
    }

    &-small {
      figure {
        padding-bottom: 59.1%;

        @include media-breakpoint-down(md) {
          padding-bottom: 62.99%;
        }
      }

      .meta-author {
        font-weight: 600;
      }

      .article-title__link {
        @include media-breakpoint-down(sm) {
          font-size: 18px;
          line-height: 1.26;
        }
      }
    }
  }

  &--on {
    &-small,
    &-medium,
    &-big {
      img {
        z-index: -1;
      }
    }

    &-big {
      @include media-breakpoint-down(md) {
        flex-basis: calc(100% + 8px);

        padding-left: 0;
        padding-right: 0;
        margin-left: -8px;
        margin-right: -8px;
        max-width: calc(100% + 8px);
      }

      .meta-author {
        color: $black;
      }

      .article-featured {
        &__image {
          &--publ {
            padding-bottom: 62.1%;
          }
        }
      }
    }

    &-medium {
      .article-title__link {
        @include media-breakpoint-up(lg) {
          font-size: 25px;
          letter-spacing: 0.03em;
        }
      }

      .article-featured {
        &,
        &__link {
          height: 100%;
        }

        &__image {
          &--publ {
            padding-bottom: 66.35%;

            background-image: linear-gradient(
              180deg,
              rgba(0, 0, 0, 0) 0%,
              #000000 100%
            );

            @include media-breakpoint-down(lg) {
              padding-bottom: 105.4%;
            }
          }
        }
      }
    }

    &-small {
      .article-title__link {
        line-height: 1.35;
      }

      .article-featured {
        &,
        &__link {
          height: 100%;
        }

        &__image {
          &--publ {
            padding-bottom: 123.3%;
            height: 100%;

            background-image: linear-gradient(
              180deg,
              rgba(0, 0, 0, 0) 0%,
              #000000 100%
            );

            @include media-breakpoint-down(md) {
              padding-bottom: 105.4%;
            }
          }
        }
      }
    }
  }
}

